[package]
name        = "raxis-credential-proxy-manager"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde     = { workspace = true }
tokio     = { workspace = true }
tracing   = "0.1"
thiserror = { workspace = true }
# Hex-encode envelope SHA-256 bytes for the SmtpMessageRelayed /
# SmtpMessageRejected audit events (the kernel `AuditEventKind`
# carries `envelope_sha256` as a hex string for chain legibility).
hex       = { workspace = true }

# Audit + credential surfaces.
raxis-audit-tools     = { workspace = true }
raxis-credentials     = { workspace = true }

# Plan-level decl parser feeds the manager.
raxis-plan-credentials = { path = "../plan-credentials" }

# Concrete proxy crates the manager binds.
raxis-credential-proxy-postgres = { path = "../credential-proxy-postgres" }
raxis-credential-proxy-http     = { path = "../credential-proxy-http" }
raxis-credential-proxy-smtp     = { path = "../credential-proxy-smtp" }
raxis-credential-proxy-redis    = { path = "../credential-proxy-redis" }
raxis-credential-proxy-aws      = { path = "../credential-proxy-aws" }
raxis-credential-proxy-gcp      = { path = "../credential-proxy-gcp" }
raxis-credential-proxy-azure    = { path = "../credential-proxy-azure" }

[dev-dependencies]
raxis-credentials-file = { workspace = true }
raxis-test-support     = { path = "../test-support" }
tempfile               = "3"
tokio                  = { workspace = true, features = ["full"] }
toml                   = { workspace = true }
