[package]
name        = "raxis-credential-proxy-mssql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MSSQL TDS credential proxy. Drives the PRELOGIN → LOGIN7 → LOGINACK handshake on its own bytes (the agent's LOGIN7 payload is discarded; the proxy authenticates upstream with the kernel-resolved credential), then classifies SQLBatch statements through the same SQL-classifier the Postgres proxy uses so allow_only_select works end-to-end."

[lib]
path = "src/lib.rs"

[dependencies]
raxis-credentials = { workspace = true }
raxis-credential-proxy-sql-shared = { workspace = true }

tokio     = { workspace = true }
bytes     = "1"
sha2      = { workspace = true }
hex       = { workspace = true }
serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = "0.1"

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
