[package]
name        = "raxis-credential-proxy-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# The trait + value type the proxy borrows credentials from.
raxis-credentials = { workspace = true }
# This crate emits its own `AuditEvent` enum (local to the proxy
# surface) rather than depending on the kernel's full audit-tools
# DAG. The kernel translates these events into `AuditEventKind`
# variants when wiring the proxy through its audit pipeline; see
# `credential-proxy.md §5` for the cross-walk and the kernel's
# `audit_events::AuditEventKind::DatabaseQueryExecuted` adapter.

# Async runtime: TCP listener + per-connection task.
tokio    = { workspace = true }
# `bytes::Bytes` is the buffer type used for Postgres frame
# serialization. Avoids unnecessary allocations on the hot path.
bytes    = "1"
# SHA-256 of every SQL statement for the audit chain (per
# credential-proxy.md §5: "query_sha256 always recorded").
sha2     = { workspace = true }
hex      = { workspace = true }

serde      = { workspace = true }
thiserror  = { workspace = true }
tracing    = "0.1"

# Real upstream Postgres driver: handles SCRAM-SHA-256 / MD5 /
# cleartext auth + connection lifecycle. See
# `credential-proxy.md §14.3 / §14.8.1` for why the proxy crate
# does NOT reimplement Postgres auth flavours from scratch.
tokio-postgres = "0.7"
futures = "0.3"

[dev-dependencies]
tokio          = { workspace = true, features = ["test-util", "macros"] }
tempfile       = "3"
