[package]
name        = "raxis-credential-proxy-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAXIS V2 — Redis (RESP) credential proxy. The agent dials a localhost Redis-shaped listener; the proxy strips the agent-supplied AUTH payload and authenticates upstream with the credential resolved through `CredentialBackend`. Per-task command allowlist enforced at the RESP boundary."

[lib]
path = "src/lib.rs"

[dependencies]
raxis-credentials = { workspace = true }

tokio    = { workspace = true }
bytes    = "1"
sha2     = { workspace = true }
hex      = { workspace = true }

serde     = { workspace = true }
thiserror = { workspace = true }
tracing   = "0.1"

# (Phase 2) — Redis TLS-to-upstream. Required by managed
# Redis offerings (AWS Elasticache, GCP Memorystore, Azure Cache).
# Pinned to the same versions as the SMTP proxy so the workspace
# uses one TLS implementation.
tokio-rustls     = { version = "0.26", default-features = false, features = ["ring"] }
rustls           = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
webpki-roots     = "1"

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
