[package]
name        = "raxis-credential-proxy-smtp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAXIS V2 — SMTP credential proxy. Per credential-proxy.md §3 ('SMTP relay'): the kernel binds the upstream SMTP relay's username + password through the CredentialBackend; the agent VM sees a localhost SMTP-shaped socket whose envelope (MAIL FROM, RCPT TO) is gated by [tasks.credentials.restrictions]."

[lib]
path = "src/lib.rs"

[dependencies]
raxis-credentials = { workspace = true }

tokio    = { workspace = true }
serde    = { workspace = true }
sha2     = { workspace = true }
hex      = { workspace = true }
thiserror = { workspace = true }
tracing   = "0.1"
# Base64 codec for `AUTH PLAIN` / `AUTH LOGIN` envelope. `0.21` is
# the long-stable line; pinning here matches the rest of the
# workspace's "minimal exposed API" stance for crypto-adjacent
# encodings.
base64    = "0.21"
# Upstream SMTP TLS (STARTTLS / implicit TLS). `tokio-rustls 0.26`
# pairs with `rustls 0.23`, both already in the workspace dep tree
# via `reqwest` so we share the same TLS implementation across the
# whole kernel rather than dragging in a second one. `webpki-roots`
# provides Mozilla's CA bundle so the proxy doesn't need to read
# the host trust store at runtime; this keeps the agent VM's
# behaviour byte-identical regardless of the host OS.
tokio-rustls   = { version = "0.26", default-features = false, features = ["ring"] }
rustls         = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1"
webpki-roots   = "1"

[dev-dependencies]
tokio    = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
