[package]
name        = "raxis-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek   = { workspace = true }
sha2            = { workspace = true }
hex             = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
getrandom       = { workspace = true }
raxis-types     = { workspace = true }
