[package]
name        = "raxis-dashboard-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kernel-side glue for the raxis-dashboard HTTP backend. Provides the `KernelDashboardData` impl that fans out to `raxis-store::ro` views, the audit `ChainReader`, and the live policy `ArcSwap`. Linked by the kernel binary; integration-tested independently. Spec: specs/v2/v2_extended_gaps.md §4."

[lib]
path = "src/lib.rs"

[dependencies]
raxis-types         = { workspace = true }
raxis-store         = { workspace = true }
raxis-policy        = { workspace = true }
raxis-audit-tools   = { workspace = true }
raxis-dashboard     = { workspace = true }
# Credential viewer (INV-DASHBOARD-CREDENTIAL-*): the kernel-glue
# layer reads `task_credential_proxies` via `raxis-plan-credentials`
# (for the proxy variant taxonomy + ParsedUpstreamUrl-style hints)
# and resolves bytes through `raxis-credentials` /
# `raxis-credentials-file` (file paths + chmod-0600 validation).
raxis-credentials       = { workspace = true }
raxis-credentials-file  = { workspace = true }
raxis-plan-credentials  = { workspace = true }
# Direct rusqlite dep is required by the credential-proxy
# walker: `task_credential_proxies` is a kernel-internal table
# without a typed `views::*` projection (it lives behind
# `raxis-kernel::initiatives::lifecycle`, which we cannot import
# without closing a dep cycle). The walker reads the same SQL
# rows the kernel writes, then re-deserialises `proxy_json` into
# `raxis_plan_credentials::ProxyDecl`. Schema drift is caught by
# the dashboard-credential e2e in `raxis-kernel`.
rusqlite     = { workspace = true }

arc-swap     = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
base64       = { workspace = true }
toml         = { workspace = true }
tokio        = { workspace = true, features = ["sync", "rt-multi-thread", "macros"] }
tracing      = "0.1"
thiserror    = { workspace = true }
parking_lot  = "0.12"

[dev-dependencies]
tempfile      = "3"
ed25519-dalek = { workspace = true }
reqwest       = { workspace = true }
raxis-test-support = { path = "../test-support" }
