[package]
name        = "raxis-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Operator dashboard HTTP backend (axum). Read-only over kernel state with one carefully-scoped write surface (PUT /api/policy/toml). Spec: specs/v2/v2_extended_gaps.md §4."

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace-internal: read-only access to live kernel state.
raxis-types         = { workspace = true }
raxis-store         = { workspace = true }
raxis-policy        = { workspace = true }
raxis-crypto        = { workspace = true }
raxis-audit-tools   = { workspace = true }

# HTTP stack. Pinned to the workspace's existing axum 0.7 family
# (the aegis-server uses the same major). tower-http provides
# CORS / compression / static serving for the React bundle.
axum         = { version = "0.7", features = ["macros", "tokio"] }
tower-http   = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace"] }
tower        = "0.5"

# Async + concurrency primitives.
tokio        = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time", "fs"] }
arc-swap     = { workspace = true }
parking_lot  = "0.12"

# Serialization + crypto for the JWT path.
serde        = { workspace = true }
serde_json   = { workspace = true }
base64       = { workspace = true }
hmac         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
getrandom    = { workspace = true }
chrono       = { workspace = true }

# Errors + observability.
thiserror    = { workspace = true }
tracing      = "0.1"

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util", "macros"] }
tempfile     = "3"
reqwest      = { workspace = true }
toml         = { workspace = true }
ed25519-dalek = { workspace = true }
