[package]
name        = "raxis-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Operator dashboard HTTP backend (axum). Read-only over kernel state with one carefully-scoped write surface (PUT /api/policy/toml)."

[lib]
path = "src/lib.rs"

[dependencies]
# Workspace-internal: read-only access to live kernel state.
raxis-types         = { workspace = true }
raxis-store         = { workspace = true }
raxis-policy        = { workspace = true }
raxis-crypto        = { workspace = true }
raxis-audit-tools   = { workspace = true }
# V3 perf-telemetry — optional `ObservabilityHub` plumbed through
# `AppStateInner` so the middleware in `server.rs` can record
# per-request histograms and the SSE handler in `routes::sessions`
# can update the connection / event gauges. Optional means: tests
# that never wire a hub still work; the metric path is a noop.
raxis-observability = { workspace = true }

# HTTP stack. Pinned to the workspace's existing axum 0.7 family
# (the aegis-server uses the same major). tower-http provides
# CORS / compression / static serving / per-handler timeout for
# the React bundle. tower's `limit` feature gives us the
# in-flight concurrency cap (Phase 1 hardening — see
# `crates/dashboard/src/server.rs::build_router` for the
# rationale + numbers).
axum         = { version = "0.7", features = ["macros", "tokio"] }
tower-http   = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace", "limit", "timeout"] }
tower        = { version = "0.5", features = ["limit"] }

# Async + concurrency primitives.
tokio        = { workspace = true, features = ["sync", "rt-multi-thread", "macros", "time", "fs"] }
arc-swap     = { workspace = true }
parking_lot  = "0.12"
futures-util = "0.3"

# Serialization + crypto for the JWT path.
serde        = { workspace = true }
serde_json   = { workspace = true }
base64       = { workspace = true }
hmac         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
getrandom    = { workspace = true }
chrono       = { workspace = true }

# Errors + observability.
thiserror    = { workspace = true }
tracing      = "0.1"

# Used by `routes::health::supervisor_pid_alive` to probe the
# supervisor PID liveness with `kill(pid, 0)` per
# `self-healing-supervisor.md §5.2` staleness rules. `nix` ships
# a typed wrapper so the dashboard crate can keep
# `forbid(unsafe_code)` even with a libc-flavoured probe.
[target.'cfg(unix)'.dependencies]
nix          = { version = "0.27", default-features = false, features = ["signal", "process"] }

[dev-dependencies]
tokio        = { workspace = true, features = ["test-util", "macros"] }
tempfile     = "3"
# Tests in `tests/hardening_smoke.rs` use `Response::json()`, which
# is gated behind reqwest's `json` cargo feature. The workspace
# default is feature-pruned for runtime compactness, so we
# layer the feature on here in dev-dependencies only.
reqwest      = { workspace = true, features = ["json"] }
toml         = { workspace = true }
ed25519-dalek = { workspace = true }
