[package]
name        = "raxis-domain-git"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "RAXIS V2 — `DomainAdapter` reference implementation for the SE (git) domain. Master fast-forward + ancestry verification host-side via `gix`."

[dependencies]
gix       = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
