[package]
name        = "raxis-domain-git"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
authors     = { workspace = true }
repository  = { workspace = true }
description = "RAXIS V2 — git-domain state helpers. Main-branch fast-forward + ancestry verification host-side via `gix`."

[dependencies]
raxis-domain = { workspace = true }
gix          = { workspace = true }
thiserror    = { workspace = true }
chrono       = { workspace = true }
sha2         = { workspace = true }
tokio        = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio    = { workspace = true }
