[package]
name        = "raxis-domain"
version.workspace = true
edition.workspace = true
license.workspace = true

# crates/raxis-domain — shared domain data types.
#
# Normative reference: `specs/v2/extensibility-traits.md §2`.
# Per the spec, this crate has zero git / DB / network deps.

[dependencies]
raxis-types       = { workspace = true }
serde             = { workspace = true }
chrono            = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
tokio             = { workspace = true }
serde_json        = { workspace = true }
